--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </li>
     </ol>
     <h2>Exercises</h2>
-    <a href="exercises/serotonin1.html">Variations on a song</a>
+    <a href="exercises/song/serotonin1.html">Variations on a song</a>
     <br>
     <br>
     <br>
