--- a/exercises/song/serotonin1.html
+++ b/exercises/song/serotonin1.html
@@ -6,6 +6,9 @@
  <meta charset="UTF-8">
 </head>
 <body>
+<a href="../index.html">Back</a> |<a href="serotonin2.html">Other version</a> 
+<br><br><br>
+<pre>
 <iframe src="https://giphy.com/embed/l44QzsOLXxcrigdgI" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 <p>I'm running low &nbsp;&nbsp;&nbsp; on <h1>serotonin</h1>
 <br>Chemical imbalance got me twisting things
