--- a/exercises/song/serotonin2.html
+++ b/exercises/song/serotonin2.html
@@ -6,6 +6,12 @@
  <meta charset="UTF-8">
 </head>
 <body>
+    <center>
+            <a href="../index.html">Back</a> |
+            <a href="serotonin1.html">Other version</a> 
+            <br><br><br>
+            <pre>
+<center>
 <p>I'm running low &nbsp;&nbsp;&nbsp; on <h1>serotonin</h1>
 <br>Chemical imbalance got me twisting things
 <br>Stabilize with medicine
@@ -68,5 +74,6 @@ Might not work but I'll take a maybe
 <br>From the corners of my mind
 <br>I'm terrified of what's inside
 </div>
+</center>
 </body>
 </html>
