--- a/exercises/song/serotonin2.html
+++ b/exercises/song/serotonin2.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <center>
-            <a href="../index.html">Back</a> |
+            <a href="index.html">Back</a> |
             <a href="serotonin1.html">Other version</a> 
             <br><br><br>
-            <pre>
 <center>
 <p>I'm running low &nbsp;&nbsp;&nbsp; on <h1>serotonin</h1>
 <br>Chemical imbalance got me twisting things
