back button and image troubleshoot

--- a/exercises/song/serotonin2.html
+++ b/exercises/song/serotonin2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-            <a href="index.html">Back</a> |
+            <a href="interactive/index.html">Back</a> |
             <a href="serotonin1.html">Other version</a> 
             <br><br><br>
 <center>
@@ -35,7 +35,7 @@ Might not work but I'll take a maybe
 <br>So I'm capitulating
 <br>Crying like a fucking baby
 <br>
-<img src="file:///Users/lourdesrohan/Desktop/github%20projects/interactive/exercises/song/images/Screen%20Shot%202022-02-01%20at%201.06.26%20PM.png"/>
+<img src="Screen%20Shot%202022-02-01%20at%201.06.26%20PM.png"/>
 <br>I'm running low on <h1>serotonin </h1>
 <br>s
 <br>
