link and image fix

--- a/exercises/song/serotonin2.html
+++ b/exercises/song/serotonin2.html
@@ -2,12 +2,12 @@
 <html>
 <head>
  <title>Serotonin</title>
- <link rel="shortcut icon" type="image/jpg" href="file:///Users/lourdesrohan/Desktop/github%20projects/interactive/exercises/song/images/tiredfacefavicon.jpeg"/>
+ <link rel="shortcut icon" type="image/jpg" href="images/tiredfacefavicon.jpeg"/>
  <meta charset="UTF-8">
 </head>
 <body>
     <center>
-            <a href="interactive/index.html">Back</a> |
+            <a href="index.html">Back</a> |
             <a href="serotonin1.html">Other version</a> 
             <br><br><br>
 <center>
@@ -27,7 +27,7 @@ Intrusive thoughts <p>
 <br>Like how do I make this stop
 When it feels like my <a href="https://yalehealth.yale.edu/directory/clinicians/caitlin-sorenson-psyd">therapist</a> hates me
 Please don't let me go crazy
-<a href="file:///Users/lourdesrohan/Desktop/github%20projects/interactive/images/Daisy-Fields_Background_0.jpeg">Put me in a field with daisies</a>
+<a href="images/Daisy-Fields_Background_0.jpeg">Put me in a field with daisies</a>
 Might not work but I'll take a maybe
 <div id="demo" class="big" dir="ltr" lang="en" style="color: mediumpurple;" tabindex="0" title="Tooltip" contenteditable="true" spellcheck="true" data-htmlcheat="99">Oh, been breaking daily
 <br>But only me can save me</div>
@@ -35,7 +35,7 @@ Might not work but I'll take a maybe
 <br>So I'm capitulating
 <br>Crying like a fucking baby
 <br>
-<img src="Screen%20Shot%202022-02-01%20at%201.06.26%20PM.png"/>
+<img src="images/Screen%20Shot%202022-02-01%20at%201.06.26%20PM.png"/>
 <br>I'm running low on <h1>serotonin </h1>
 <br>s
 <br>
