--- a/exercises/song/serotonin1.html
+++ b/exercises/song/serotonin1.html
@@ -2,11 +2,11 @@
 <html>
 <head>
  <title>Serotonin</title>
- <link rel="shortcut icon" type="image/jpg" href="file:///Users/lourdesrohan/Desktop/github%20projects/interactive/images/tiredfacefavicon.jpeg"/>
+ <link rel="shortcut icon" type="image/jpg" href="images/tiredfacefavicon.jpeg"/>
  <meta charset="UTF-8">
 </head>
 <body>
-<a href="interactive/index.html">Back</a> |<a href="serotonin2.html">Other version</a> 
+<a href="index.html">Back</a> |<a href="serotonin2.html">Other version</a>
 <br><br><br>
 <iframe src="https://giphy.com/embed/l44QzsOLXxcrigdgI" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 <p>I'm running low &nbsp;&nbsp;&nbsp; on <h1>serotonin</h1>
