final organize + troubleshoot

--- a/exercises/song/serotonin2.html
+++ b/exercises/song/serotonin2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-            <a href="index.html">Back</a> |
+            <a href="/../../index.html">Home</a> |
             <a href="serotonin1.html">Other version</a> 
             <br><br><br>
 <center>
