--- a/exercises/song/serotonin1.html
+++ b/exercises/song/serotonin1.html
@@ -6,7 +6,7 @@
  <meta charset="UTF-8">
 </head>
 <body>
-<a href="/../../index.html">Home</a> |<a href="serotonin2.html">Other version</a>
+<a href="../../index.html">Home</a> |<a href="serotonin2.html">Other version</a>
 <br><br><br>
 <iframe src="https://giphy.com/embed/l44QzsOLXxcrigdgI" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 <p>I'm running low &nbsp;&nbsp;&nbsp; on <h1>serotonin</h1>
