--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lourdes' class website</title>
+    <title>Lourdes Learns WebDev</title>
     <link rel="icon" type="image/png" href="images/icon.png"/>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 id="top">Lourdes' class website</h1>
+    <h1 id="top">Lourdes Learns WebDev</h1>
     <h2>Class projects</h2>
     <ol>
       <li>
-        Project 1
+        <a href="projects/1_interview/rahshemah.html">Project 1: Interview</a>
       </li>
       <li>
         Project 2 (coming soon!)
@@ -27,15 +27,12 @@
     <br>
     <br>
     <div>
-      <h4>About this site</h4>
-      <p>Here's a little paragraph about this site, in a paragraph tag... This is just some sample code to help you get started. You'll notice the HTML page has all the basic parts. You can change the title and the h1 at the top to include your name. I also set up a few links... click on "Top 10" and you'll go to the start of a top 10 list... then there's a link back to this page. Can copy and paste any of these tags or delete them and replace with your own content.</p>
+      <h2> About this site</h2>
+      <p>Hi there! This site is my first web development project I've done from scratch, made with skills I'm learning in ART 369 at the Yale School of Art. It contains my projects, exercises, and experiments with HTML, CSS, and Javascript. Thanks for checking it out!/p>
       <div>
         <a href="http://software-for-people.net/">Visit my homepage!</a>
       </div>
-    </div>
-    <p>Technology is <b>truly</b> amazing!</p>
-    <div>
-      <img src="images/penny.png">
+
     </div>
     <br>
     <br>
