folder name + character correction

--- a/projects/interview/rahshemah.html
+++ b/projects/interview/rahshemah.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Project1_Interview</title>
+    <title>Project1Interview</title>
     <link rel="icon" type="image/png" href="images/icon.png"/>
     </head>
   <body>
