new project and copy edits

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h2>Exercises</h2>
     <a href="exercises/song/serotonin1.html">Variations on a song</a>
     <br>
+        <a href="exercises/pictures/picture_exercise.html">Arrangement of Pictures</a>
     <br>
     <br>
     <div>
