interview updates + in class picture assignment

--- a/projects/interview/rahshemah.html
+++ b/projects/interview/rahshemah.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Project1Interview</title>
     <link rel="icon" type="image/png" href="images/icon.png"/>
+    <link rel="stylesheet" href="interviewstyle.css">
     </head>
   <body>
-    <h1 id="top">how to art; rahshemah wise and self-compassionate joy</h1>
+    <h1 id="title">how to art</h1>
+    <h2 id="subtitle"> rahshemah wise and self-compassionate joy</h2>
 
-<ol>  
+<ol id="questions">  
 <li>Summarize who you are in a brief sentence or two (try to keep it short)</li>
 <li>What was your dream job as a child?</li>
 <li>What is it now?</li>
@@ -20,89 +22,176 @@
 <li>What is your relationship with art?</li>
 <li> Is there anything you’d like to share/say to the folks reading?</li>
 <br>
-<b>Summarize who you are in a brief sentence or two <b>, so not so much introduction, but more so just like if you had to tell like pitch who you are as a person. 
+<div id="q1">
+<div class= "lourdes">
+<b>Summarize who you are in a brief sentence or two </b>, so not so much introduction, but more so just like if you had to tell like pitch who you are as a person. 
+</div>
 <br>
-<br>I think just like, thinking about like me as the person, I would say that I'm pretty nurturing. Um, I really, um, like if I could do one thing, it would just be to make other people's lives easier. Um, because life has been pretty hard for me and that's been sucky, so I don't want people to have to deal with that. 
+<div class="rahshemah">
+<br>I think just like, thinking about like me as the person, I would say that I'm pretty nurturing. Um, I really, um, like if I could do one thing, it would just be to make other people's lives easier. Um, because life has been pretty hard for me and that's been sucky, so I don't want people to have to deal with that.
+</div> 
 <br>
+<div class= "lourdes">
 <br>Beautiful. That's very fair. And I love that response. Nurturing is such a beautiful word to describe you. And I haven't ever met you like physically in person and like interact with you enough, but that is the vibe that I get from you just from like, so, so next question. 
-
-<br><b>What was your dream job as a title? I really liked those question. </b>
+</div>
+</div>
 <br>
-<br>My dream job was as a child, I really wanted him to be a baker. Um, I was really obsessed with the idea of just like making cakes and cupcakes and making them super, pretty, doing like little icing, like words and stuff. I was very invested in that. Um, I was told that I had too much potential academically to just throw it all away to be a baker. So, um, yeah. 
 <br>
+<div id="q2">
+<div class="lourdes">
+<b>What was your dream job as a child? </b>I really liked those question. 
+</div>
+<br>
+<div class="rahshemah">
+<br>My dream job was as a child, I really wanted him to be a baker. Um, I was really obsessed with the idea of just like making cakes and cupcakes and making them super, pretty, doing like little icing, like words and stuff. I was very invested in that. Um, I was told that I had too much potential academically to just throw it all away to be a baker. So, um, yeah.
+</div> 
+<br>
+<div class= "lourdes">
 <br>Oh, my God. That's so relatable. I feel like, like  children pick up such creative hobbies and then they're immediately like told like non and all your you're smart. Like don't do that. It's like, okay. Yeah. So that's very sweet. I love that open, like a little bakery. It's a very sweet dream. 
+</div>
+</div>
 <br>
+<br>
+<div id="q3">
+<div class="lourdes">
 <br><b>What is your dream job now?</b> Not to like, dream of labor, but like, you know..
+</div>
 <br>
+<div class="rahshemah">
 <br> I thought about that when I looked at the question, um, I think my dream job now would to be some kind of like ADHD life coach type vibe, like I just like kind of meet with people and help them create strategies that make their life easier and somehow make that like able to live off of.
+</div>
 <br>
+<div class= "lourdes">
 <br>Yeah, that's a very noble pursuit. Yeah. It's almost like a question like in a vacuum, like if you could just do one thing, like not so much as the job, but like as a passion. So you answered that very, very eloquently. Thank you. <br>
-All right. What, <b>describe what joy feels like slash looks like to you.</b>
+</div>
+</div>
 <br>
+<br>
+<div id="q4">
+<div class="lourdes">
+All right. What, <b>describe what joy feels like slash looks like to you.</b>
+</div>
+<br>
+<div class="rahshemah">
 <br>Um, there's a lot because, um, it's new even in the winter.
 So the big side is creeping and creeping about, um, for me, joy is a feeling of deep connection with other people. Like. Feeling without a doubt that I am not alone, just like community and care and holding space for other people, knowing that like space is also being held for me, like a mutual sharing of space.
+</div>
+</div>
 <br>
 <br>
+<div id="q5">
+<div class= "lourdes">
 <b>If you can have a lifetime supply of one snack or food, what would it be like?</b> Something that you will never run out of
+</div>
 <br>
-<br> This is actually really hard. Um, God like, there are a couple of options. I like have safe foods that like, you know, if I can't eat anything, I could like eat one of these, like pretty consistently. Um, I think my vibe right now is like squeezy applesauce. Like, you know, like applesauce that comes in the packets. There's something about that. It's just so healing for my inner child. She's like T here. Oh my God. I have like, I love. What's [00:06:00] something about it being a little squeezy packet, tactile and entrepreneurial.
+<div class="rahshemah">
+<br> This is actually really hard. Um, God like, there are a couple of options. I like have safe foods that like, you know, if I can't eat anything, I could like eat one of these, like pretty consistently. Um, I think my vibe right now is like squeezy applesauce. Like, you know, like applesauce that comes in the packets. There's something about that. It's just so healing for my inner child. She's like T here. Oh my God. I have like, I love. Something about it being a little squeezy packet, tactile and entrepreneurial.
+</div>
 <br>
+<div class="lourdes">
 <br> That's a great answer. All right. Let's see. Oh, wait, moving off of that question. This is a tangent question. Like, would you rather have like, you know, like a replenishing bucket of like squeezy app, like uh applesauces or would you rather have like one act like one little like squeezy thing that just never wants.
+</div>
 <br>
+<div class="rahshemah">
 <br>A bucket that just replenishes. So, um, I, I just like who does part, I forget to eat a lot, so I have a little bucket by my bed that just always like snacks and stuff in there. I got lost on tech talk and like organizing talks. So it hassle like clear bins for the different stacks. So if my little band of squeezy applesauces could just never be empty because it is empty right now.
+</div>
+</div>
 <br>
+<br>
+<div id="q6">
+<div class="lourdes">
 <br>okay. Next is <b>what do you like the most about yourself?</b>
+</div>
 <br>
+<div class="rahshemah">
 <br>It's hard.
+</div>
 <br>
-<br>I'm so sorry. I don't mean to like trigger anything. Just trying to like self compassion, you know? 
+<div class="lourdes">
+<br>I'm so sorry. I don't mean to like trigger anything. Just trying to highlight some self compassion, you know? 
+</div>
 <br>
+<div class="rahshemah">
 <br>Um, I think the thing I like most about myself. My ability to just kind of like keep going, which seems really simple. Um, but like, there's this like really corny quote from Pinterest where it's like, you've survived a hundred percent of your worst days.
-[00:07:57] And I just really liked that. [00:08:00] Life is so shitty. Like I like objectively life is pretty shitty. So the fact that I'm still here and like, I exist as a person and I can like, you know, do things. I'm just really proud of that because the world was stacked against me. 
+And I just really liked that. Life is so shitty. Like I like objectively life is pretty shitty. So the fact that I'm still here and like, I exist as a person and I can like, you know, do things. I'm just really proud of that because the world was stacked against me. 
+</div>
 <br>
-<br>No, literally like that's, that's worth like admiring from yourself, you know, like it's, it's not easy. And you know, some people, some people like don't keep going, you know, it's something that's very, very. Beautiful to appreciate and to internalize as something that is beautiful about you and we are. So I think that that was a beautiful answer. 
+<div class= "lourdes">
+<br>No, literally like that's, that's worth like admiring from yourself, you know, like it's, it's not easy. And you know, some people, some people like don't keep going, you know, it's something that's very, very. Beautiful to appreciate and to internalize as something that is beautiful about you and we are. So I think that that was a beautiful answer.
+</div>
+</div>
+<br>
+<br>
+<div id="q7">
+<div class="lourdes">
 <br>Um, all right. Let's see. What's the next one? Okay. So I rearranged the order of these questions, but they're all the same questions.
-[00:08:53] Um, so no, nothing out of left field. <b>So do you have a favorite piece of art and what is it [00:09:00] and why is it your favorite? </b> Um, yeah. 
+Um, so no, nothing out of left field. <b>So do you have a favorite piece of art and what is it and why is it your favorite? </b> Um, yeah. 
+</div>
 <br>
+<div class="rahshemah">
 <br>Okay. I have to get it to show you because I don't think it's going to make sense otherwise. Um, so I, um, This is like my favorite because of literally just for me, like, it doesn't matter. It's very insignificant, but it makes me very happy. Um, so I do art journal. I don't think I can hear you. Uh, oh, perfect. Sorry about that. So if you could just repeat the way your description before so that it isn't like, oh, sorry.
-This is my favorite, because like, it literally just doesn't matter, you know? Like it's just like, ah, this is fun. I can just like spit and do those. There's no like right or wrong way to do this. And I wouldn't say that I am not creative, but I have very. Like [00:10:00] very rarely do I come up with original ideas on my own.
- A lot of it's like, oh, I saw a picture of something. And I was like, oh, I could totally make that. Or like, I could like imitate that. Like, that's a lot of what my art is. Um, and so this is just kind of like me doing whatever's let me turn my camera on so you can see it. Um, this is my journal. Um, so I literally will like scrap book.
-[00:10:25] My journal. Um, and like each month has a different color theme. 
+This is my favorite, because like, it literally just doesn't matter, you know? Like it's just like, ah, this is fun. I can just like spit and do those. There's no like right or wrong way to do this. And I wouldn't say that I am not creative, but I have very. Like very rarely do I come up with original ideas on my own.
+A lot of it's like, oh, I saw a picture of something. And I was like, oh, I could totally make that. Or like, I could like imitate that. Like, that's a lot of what my art is. Um, and so this is just kind of like me doing whatever's let me turn my camera on so you can see it. Um, this is my journal. Um, so I literally will like scrap book. My journal. Um, and like each month has a different color theme. 
+</div>
 <br>
+<div class="lourdes">
 <br>Um, beautiful. It feels like I'm watching, like those scrapbooking tech talks, they open up a page. No, like, I will watch those for average, but they like open the book and then they take out their little tweezers and peel off the stickers. Yeah.
+</div>
 <br>
 <br>
+<div class="rahshemah">
  The amount of money I spent on Etsy on stickers alone is, and it's okay. 
+</div>
 <br>
-<br>And that is okay. I support you in that. [00:11:00] Wow. Can I ask you just to, I mean, if you're comfortable, like you can blur out words if you want. Could you send me like a picture of spread of like your favorite spreads and stuff. That'd be perfect.
+<div class="lourdes">
+<br>And that is okay. I support you in that. Wow. Can I ask you just to, I mean, if you're comfortable, like you can blur out words if you want. Could you send me like a picture of spread of like your favorite spreads and stuff. That'd be perfect.
 <br>
 <br>
 It's great. that's beautiful. I loved it. Like your fate. When you think of your favorite artists, something that you've created yourself, because I feel like I'm taking a lot of art classes semester and people instinctively are like, Well, like all these like artists, like okay.
 Um, yeah, it's a lot. Um, all right. <br>
+</div>
+</div>
+<br>
+<br>
+<div id="q8">
+<div class="lourdes">
 So you kind of described your creative process and I answered, so we're going to scrap that question. Um, but I did want to ask, <b> what is your relationship with art? </b>
+</div>
 <br>
 <br>
+<div class="rahshemah">
  I feel like art is very. Intrinsic to who I am like for as long as I can remember, I been a super [00:12:00] creative person. Um, My mom has like drawings and paintings from when I was like two or three, like that she's kept. And I really can't remember a time where I wasn't doing art in some way. And like when I was young, um, I was obsessed with Play-Doh like, Play-Doh is my big thing.
  It made me really happy. But instead of just like, you know, messing around with Play-Doh. Gourmet like breakfast meals. I would like mold the colors and like very carefully layer them on top of each other. Like it was a little bit like, I just, I think art has always just been something to do. Um, and recently it's been kind of hard to engage with it, especially after coming to Yale because Yale makes it feel like there is a right and wrong way to art.
  Which is really frustrating. Um, so I guess my relationship to art is very, just like, I don't know, confident, like it feels homey. Um, especially when I take away the pressure from myself to like, have to art in a particular. 
+</div>
 <br>
-<br>Yeah, that's very fair. It's like retweet with the art here is frustrating. Like, it really is like, it's intimidating.
-[00:13:25] So like, you know, even just like the word, like art, or like telling yourself like an artist, you know, like it feels as it's like, there are qualifications that you have to meet. To like be an artist. It was like, no, like art is like this beautiful thing that we can all do. Let's not gatekeep art.<br>
+<div class="lourdes">
+<br>Yeah, that's very fair. It's like retweet with the art here is frustrating. Like, it really is like, it's intimidating. So like, you know, even just like the word, like art, or like telling yourself like an artist, you know, like it feels as it's like, there are qualifications that you have to meet. To like be an artist. It was like, no, like art is like this beautiful thing that we can all do. Let's not gatekeep art.<br>
 
 All right. Let's see. I think we'd have. Um, I'm going to scrap the favorite project. You've worked on question because I think that you've touched on that in a really nice way. 
+</div>
+</div>
 <br>
+<br>
+<div id="q9">
+<div class= "lourdes">
 <br>for the final question, <b>is there anything specific that you'd like to share or say to the folks who might read your interview? </b>
 <br>
 Anything that you use? If this was going published on like time magazine or like, so, or something like that, like you knew so many people are going to read this. What would you want them to know either about you or like something that you just want?
+</div>
 <br>
 <br>
-Like in the least nihilistic way possible. Everything is fake. Like literally nothing matters. And so it's kind of like, I don't know, that idea is very freeing to me because. It really is a lot of pressure and expectation from doing things in a particular way, or like doing things for people. And I've been very much like shifting my relationship with art in the public to be sharing what I create rather than creating to [00:15:00] share.
+<div class="rahshemah">
+Like in the least nihilistic way possible. Everything is fake. Like literally nothing matters. And so it's kind of like, I don't know, that idea is very freeing to me because. It really is a lot of pressure and expectation from doing things in a particular way, or like doing things for people. And I've been very much like shifting my relationship with art in the public to be sharing what I create rather than creating to share.
 Like, um, and I think that that's been really important just to give myself the space to vibe exists. Do what I like. Um, and that always feels so much more genuine. So like nothing matters, like time will go on regardless of what you do or don't do just kind of ride the wave and like, things will be okay in the end.
  Like things have a way of working out and like we're literally living in the end of the world.
 Do do what you need to do with the, then under that beautiful. 
+</div>
 <br>
+<div class="lourdes">
 <br>Oh my God. That is perfect. Thank you so much. That was the interview. Easy-peasy I'm going to stop the recording.
-
+</div>
+</div>
 
 
 
